--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">eMarket</string>
     <string name="searchbar_placeholder">Search</string>
+    <string name="display_price_0precision">$%,.0f</string>
+    <string name="display_price_2precision">$%,.2f</string>
 </resources>
