--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="display_price_2precision">$%,.2f</string>
     <string name="saved_token_key">token_key</string>
     <string name="zero_products_alert">You need to add a product to the cart first.</string>
+    <string name="failed_checkout_alert">There was an ERROR processing this purchase.</string>
 </resources>
